# Plugins

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
QvPlugin-Command/: CMakeLists.txt  CommandPlugin.hpp
QvPlugin-Command/core/: EventHandler.cpp  EventHandler.hpp
QvPlugin-Command/ui/: CommandPluginSettings.cpp  CommandPluginSettings.hpp  GUIInterface.hpp
QvPlugin-LatencyTest/: BuiltinLatencyTesterPlugin.cpp  BuiltinLatencyTesterPlugin.hpp  CMakeLists.txt
QvPlugin-LatencyTest/latency/: DNSBase.hpp  ICMPLatencyTester.cpp  ICMPLatencyTester.hpp  TCPLatencyTester.cpp  TCPLatencyTester.hpp
QvPlugin-NaiveProxy/: CMakeLists.txt  SimplePlugin.hpp
QvPlugin-NaiveProxy/core/: Kernel.cpp
QvPlugin-NaiveProxy/ui/: OutboundEditor.cpp  OutboundEditor.hpp  SettingsWidget.cpp  SettingsWidget.hpp  UIInterface.hpp
QvPlugin-Trojan-Go/: CMakeLists.txt  TrojanGoPlugin.hpp
QvPlugin-Trojan-Go/core/: Kernel.cpp
QvPlugin-Trojan-Go/ui/: GUIInterface.hpp
QvPlugin-Trojan-Go/widgets/: TrojanGoOutboundWidget.cpp  TrojanGoOutboundWidget.hpp  TrojanGoSettingsWidget.cpp  TrojanGoSettingsWidget.hpp
